# PEPTSpline

./: README.md  __init__.py  api.py  pyproject.toml
PEPTSpline/: __init__.py  _core.py  api.py
examples/: __init__.py  simple_csv_fit.py  simple_numpy_fit.py
tests/: test_api.py
